--- a/styles.css
+++ b/styles.css
@@ -52,11 +52,11 @@ body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     background: #f0f0f0;
-    color: #333; /* Default text color */
+    color: #333; 
 }
 
 header {
-    background-color: #ffffff; /* Dark background for header */
+    background-color: #ffffff; 
     color: #fff;
     padding: 20px 0;
     text-align: center;
@@ -91,14 +91,14 @@ header nav ul li a {
     text-decoration: none;
     font-size: 18px;
     transition: color 0.3s ease;
-    padding: 10px 15px; /* Add padding to make navigation items more clickable */
-    border-radius: 5px; /* Rounded corners for navigation items */
-    background-color: #555; /* Darker background for navigation items */
+    padding: 10px 15px; 
+    border-radius: 5px; 
+    background-color: #555; 
 }
 
 header nav ul li a:hover {
-    background-color: #ffc107; /* Yellow background on hover */
-    color: #333; /* Darker text on hover */
+    background-color: #ffc107; 
+    color: #333; 
 }
 
 .header {
@@ -186,7 +186,7 @@ header nav ul li a:hover {
 .about-section {
     padding: 100px 0;
     /* background-color: #3498db;  */
-    background-image: url(https://static.videezy.com/system/resources/previews/000/043/469/original/01__2824_29.mp4);
+    background-image: url(images/backGround.mp4);
     /* background-image: url(https://static.videezy.com/system/resources/previews/000/043/943/original/200214-BWBrush02.mp4); */
     color: #fff; 
     text-align: center;
@@ -261,7 +261,7 @@ header nav ul li a:hover {
 .services-section {
     padding: 100px 0;
     /* background-color: #e67e22; Orange background for Services section */
-    background-image: url(https://static.videezy.com/system/resources/previews/000/043/469/original/01__2824_29.mp4);
+    background-image: url(images/backGround.mp4);
     
     color: #ffffff; 
     text-align: center;
