--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ header nav ul li a:hover {
 
 .header {
     width: 100%;
-    height: 400px; /* Adjust based on your image size */
+    height: 400px; 
     background-image: url('images/mmmut-img4.jpg');
     background-size: cover;
     background-position: center;
@@ -121,13 +121,13 @@ header nav ul li a:hover {
     width: 100%;
     height: 50px;
     position: fixed;
-    top: -60px; /* Initially hide it above the viewport */
+    top: -60px; 
     left: 0;
-    transition: top 0.3s ease-in-out; /* Smooth transition */
+    transition: top 0.3s ease-in-out; 
 }
 
 .navbar.sticky {
-    top: 0; /* Stick it to the top of the page */
+    top: 0; 
 }
 
 
@@ -186,7 +186,7 @@ header nav ul li a:hover {
 .about-section {
     padding: 100px 0;
     /* background-color: #3498db;  */
-    background-image: url(images/backGround.mp4);
+    background-image: url(images/backgroundImage.jpg);
     /* background-image: url(https://static.videezy.com/system/resources/previews/000/043/943/original/200214-BWBrush02.mp4); */
     color: #fff; 
     text-align: center;
@@ -261,7 +261,7 @@ header nav ul li a:hover {
 .services-section {
     padding: 100px 0;
     /* background-color: #e67e22; Orange background for Services section */
-    background-image: url(images/backGround.mp4);
+    background-image: url(images/backgroundImage.jpg);
     
     color: #ffffff; 
     text-align: center;
@@ -297,7 +297,7 @@ header nav ul li a:hover {
 .projects-section {
     padding: 50px 0;
     /* background: #333; */
-    background-image: url(https://static.videezy.com/system/resources/previews/000/043/469/original/01__2824_29.mp4);
+    background-image: url(images/backgroundImage.jpg);
     text-align: center;
     color: #fff; 
 }
@@ -318,8 +318,8 @@ header nav ul li a:hover {
     margin: 10px;
     text-align: left; 
     padding: 20px;
-    background-color: #444; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: #01060b98; 
+    box-shadow: 0 4px 8px rgba(46, 19, 154, 0.7);
     border-radius: 8px;
 }
 
