--- a/styles.css
+++ b/styles.css
@@ -32,8 +32,6 @@ button:hover {
     background-color: #003366;
 }
 
-
-
 /* Resetting default browser styles */
 * {
     margin: 0;
@@ -42,27 +40,29 @@ button:hover {
 }
 
 /* Basic styling */
-a:link{
+a:link {
     text-decoration: none;
 }
-a:hover{
+
+a:hover {
     background-color: gray;
 }
+
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    color: #333; 
-    margin: 0; 
-    height: 100vh; 
-    background-image: url('images/backgroundImage.jpg'); 
-    background-size: cover; 
-    background-position: center; 
-    background-attachment: fixed; 
-    background-repeat: no-repeat; 
+    color: #333;
+    margin: 0;
+    height: 100vh;
+    background-image: url('images/backgroundImage.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
 header {
-    background-color: #ffffff; 
+    background-color: #ffffff;
     color: #fff;
     padding: 20px 0;
     text-align: center;
@@ -74,12 +74,6 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.logo-container img {
-    max-width: 100%;
-    height: auto;
-    vertical-align: middle;
 }
 
 header nav ul {
@@ -97,25 +91,23 @@ header nav ul li a {
     text-decoration: none;
     font-size: 18px;
     transition: color 0.3s ease;
-    padding: 10px 15px; 
-    border-radius: 5px; 
-    background-color: #555; 
+    padding: 10px 15px;
+    border-radius: 5px;
+    background-color: #555;
 }
 
 header nav ul li a:hover {
-    background-color: #ffc107; 
-    color: #333; 
+    background-color: #ffc107;
+    color: #333;
 }
 
 .header {
     width: 100%;
-    height: 400px; 
+    height: 400px;
     background-image: url('images/mmmut-img4.jpg');
     background-size: cover;
     background-position: center;
 }
-
-
 
 /* Navigation bar, initially hidden */
 .navbar {
@@ -127,38 +119,33 @@ header nav ul li a:hover {
     width: 100%;
     height: 50px;
     position: fixed;
-    top: -60px; 
+    top: -60px;
     left: 0;
-    transition: top 0.3s ease-in-out; 
+    transition: top 0.3s ease-in-out;
 }
 
 .navbar.sticky {
-    top: 0; 
+    top: 0;
 }
 
-
-
 /* Home Section */
-
 .zoom-text {
     font-size: 20px;
     display: inline-block;
     transition: transform 0.3s ease, font-size 0.3s ease, color 0.3s ease;
-    transform-origin: center center; /* Zoom around the center of each word */
+    transform-origin: center center;
 }
 
-/* Color change and zoom effect for the hovered word */
 .zoomed {
-    transform: scale(1.2); /* Slight zoom effect on hovered word */
-    color: #fbff00; /* Change color when hovered */
+    transform: scale(1.2);
+    color: #fbff00;
     background-color: rgba(6, 6, 4, 0.633);
     border-radius: 7px;
 }
 
-/* Color change and zoom effect for the neighboring words */
 .adjacent {
-    transform: scale(1.1); /* Slight zoom effect on neighbors */
-    color: #95a5a6; /* Lighter color for neighbors */
+    transform: scale(1.1);
+    color: #95a5a6;
 }
 
 .home-section {
@@ -190,9 +177,7 @@ header nav ul li a:hover {
 /* About Section */
 .about-section {
     padding: 100px 0;
-    /* background-color: #3498db;  */
-    /* background-image: url(https://static.videezy.com/system/resources/previews/000/043/943/original/200214-BWBrush02.mp4); */
-    color: #fff; 
+    color: #fff;
     text-align: center;
 }
 
@@ -209,65 +194,16 @@ header nav ul li a:hover {
     margin-bottom: 20px;
 }
 
-.about-section p {
-    font-size: 18px;
-    line-height: 1.6;
-    max-width: 800px;
-    margin: auto;
-}
-
 .about-section img {
     max-width: 100%;
     border-radius: 8px;
-    margin-top: 20px; 
+    margin-top: 20px;
 }
-
-
-/* spinning effect 😎 */
-
-.link-container {
-    perspective: 1000px; 
-  }
-
-  /* Image styles */
-  .link-container img {
-    transition: transform 0.5s ease; 
-    transform-style: preserve-3d; 
-  }
-
-  /* Hover Effect */
-  .link-container:hover img {
-    animation: coin-spin 2s ease-in-out; 
-  }
-
-  /* Keyframes for coin-like spinning */
-  @keyframes coin-spin {
-    0% {
-      transform: rotateY(0deg);
-    }
-    25% {
-      transform: rotateY(90deg); 
-    }
-    50% {
-      transform: rotateY(180deg); 
-    }
-    75% {
-      transform: rotateY(270deg); 
-    }
-    100% {
-      transform: rotateY(1080deg); 
-    }
-  }
-
-
 
 /* Services Section */
 .services-section {
     padding: 100px 0;
-    /* background-color: #e67e22; Orange background for Services section */
-    /* background-image: url(images/backgroundImage.jpg); */
-    
-    color: #ffffff; 
+    color: #ffffff;
     text-align: center;
 }
 
@@ -284,26 +220,17 @@ header nav ul li a:hover {
     margin-bottom: 20px;
 }
 
-.services-section p {
-    font-size: 18px;
-    line-height: 1.6;
-    max-width: 800px;
-    margin: auto;
-}
-
 .services-section img {
     max-width: 100%;
     border-radius: 8px;
-    margin-top: 20px; 
+    margin-top: 20px;
 }
 
 /* Projects Section */
 .projects-section {
     padding: 50px 0;
-    /* background: #333; */
-    /* background-image: url(images/backgroundImage.jpg); */
     text-align: center;
-    color: #fff; 
+    color: #fff;
 }
 
 .projects-section .container {
@@ -318,11 +245,11 @@ header nav ul li a:hover {
 }
 
 .project {
-    width: calc(33.33% - 20px); 
+    width: calc(33.33% - 20px);
     margin: 10px;
-    text-align: left; 
+    text-align: left;
     padding: 20px;
-    background-color: #01060b98; 
+    background-color: #01060b98;
     box-shadow: 0 4px 8px rgba(46, 19, 154, 0.7);
     border-radius: 8px;
 }
@@ -336,25 +263,15 @@ header nav ul li a:hover {
 .project h3 {
     font-size: 20px;
     margin-bottom: 10px;
-    color: #ffc107; 
+    color: #ffc107;
 }
-
-.project p {
-    font-size: 16px;
-    color: #ccc; 
-}
-
-#contact-form{
-    color: white;
-}
-
 
 /* Footer Section */
 footer {
-    background-color: #3498db; /* Blue background for footer */
-    color: #fff; /* White text color */
+    background-color: #3498db;
+    color: #fff;
     text-align: center;
-    padding: 50px 0; /* Increased padding for footer */
+    padding: 50px 0;
 }
 
 footer .container {
@@ -370,7 +287,7 @@ footer .container {
     align-items: center;
     max-width: 80%;
     margin: auto;
-    padding: 20px; /* Padding for better spacing */
+    padding: 20px;
 }
 
 .contact-info {
@@ -383,58 +300,7 @@ footer .container {
     margin-bottom: 20px;
 }
 
-.contact-info p {
-    font-size: 18px;
-    line-height: 1.6;
-}
-
-.contact-image {
-    flex: 1;
-    text-align: right;
-}
-
 .contact-image img {
     max-width: 100%;
     border-radius: 8px;
-}
-
-/* Responsive adjustments */
-@media (max-width: 768px) {
-    .logo-container img {
-        width: 120px;
-    }
-
-    .logo {
-        font-size: 28px;
-    }
-
-    header nav ul li a {
-        font-size: 16px;
-    }
-
-    .about-services-section {
-        flex-direction: column; 
-        padding: 50px 0;
-    }
-
-    .about-section,
-    .services-section {
-        max-width: 100%; 
-        padding: 20px;
-        text-align: center;
-    }
-
-    .projects-section .container {
-        width: 100%;
-    }
-
-    .project {
-        width: calc(50% - 20px); 
-    }
-
-    .info-section .container {
-        width: 100%; 
-    }
-
-    
 }
